--- a/welcome.html
+++ b/welcome.html
@@ -4,64 +4,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Welcome</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-
-                <button class="btn btn-outline-primary" type="button" id="signoutBtn">Sign out</button>
-
-            </div>
-        </div>
-    </nav>
+    <script src="https://cdn.tailwindcss.com"></script>
     
+<body id="background">
+    <div class=" m-auto flex flex-col justify-center items-center h-screen w-screen border-2 border-black">
+        <h1 id="content" class="text-start text-3xl text-cyan-200 " ></h1>
+        <h1 id="loggedIn" class="text-3xl text-cyan-200"></h1>
+        <button class="text-black mt-5 bg-cyan-200 hover:bg-cyan-500  font-serif font-bold rounded-lg text-xl px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" type="button" id="signoutBtn">Sign out</button>
+    </div>
+   
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    
     <script>
         // refrences
         let signOutBtn = document.getElementById("signoutBtn")
         let userCreds = JSON.parse(sessionStorage.getItem("user-creds"))
         let userInfo = JSON.parse(sessionStorage.getItem("user-info"))
-
+        let content = document.getElementById("content")
+        let loggedIn = document.getElementById("loggedIn")
         // function
         let signOut = () => {
             sessionStorage.removeItem("user-creds")
@@ -72,7 +34,8 @@
             if (!sessionStorage.getItem("user-creds")) {
                 window.location.href = "index.html"
             } else {
-                // console.log(`${userInfo.firstName} ${userInfo.lastName}`);
+                content.innerHTML=`Welcome! ${userInfo.firstName.toUpperCase()} ${userInfo.lastName.toUpperCase()}`
+                loggedIn.innerHTML= `You are successfully logged in`
                 Swal.fire({
                     position: "center",
                     icon: "success",
